deployments/kubernetes/overlays/development/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: portfolio
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: portfolio
          resources:
            limits:
              cpu: "0.3"
              memory: "256Mi"
            requests:
              cpu: "0.1"
              memory: "128Mi"
