deployments/kubernetes/overlays/development/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
spec:
  rules:
    - host: dev.portfolio.glanze.site
